adding github link for portfolio project

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,12 +79,12 @@
               </a>
             </div>
             <div class = "project_block">
-              <a href = "https://www.mmaiouf.fr" title = "Check this project">
+              <a href = "https://www.mmaiouf.fr" title = "Check this project" target = "_blank">
                 <h2 id = "title_portfolio">Portfolio</h2>
                 <p><img src = "images/Portfolio_image_mini.png" alt = "ScreenShot CV"></p>
                 <p class = "short_description_project">This portfolio designed by myself</p>
                 <p class = "tools_project"> HTML / CSS</p>
-                <a href = ""><p class = "check_code">check the code</p></a>
+                <a href = "https://github.com/mmaiouf/Portfolio_Project"><p class = "check_code">check the code</p></a>
               </a>
             </div>
           </div>  
