Refactoring + DRY + BEM

--- a/blog.html
+++ b/blog.html
@@ -17,19 +17,19 @@
   <body>
         <header>
           <div id = "top">
-          <div id = "header_block">
-            <div id = "name_header">
-              <p> <a href = "portfolio.html#top"> Mouaad Maiouf </a></p>
+            <div id = "header_block">
+              <div class = "header-block__name">
+                <p> <a href = "portfolio.html#top"> Mouaad Maiouf </a></p>
+              </div>
+                <nav>
+                  <div id = "nav_block">
+                    <p><a href = "portfolio.html#top"> About</a></p>
+                    <p><a href = "portfolio.html#section-projects"> Projects</a></p>
+                    <p><a href = "blog.html"> Blog </a></p>
+                    <!--<p class = "contact_header"><a href = "portfolio.html#section_contact"> Contact</a></p>-->
+                  </div>
+              </nav>
             </div>
-              <nav>
-                <div id = "nav_block">
-                  <p class = "about_header"> <a href = "portfolio.html#top"> About</a></p>
-                  <p class = "projects_header"><a href = "portfolio.html#section_projects"> Projects</a></p>
-                  <p class = "blog_header"><a href = "blog.html"> Blog </a> </p>
-                  <!--<p class = "contact_header"><a href = "portfolio.html#section_contact"> Contact</a></p>-->
-                </div>
-            </nav>
-          </div>
           </div>
         </header>
         <h1>This content is not available at the moment !</h1>
