--- a/portfolio.html
+++ b/portfolio.html
@@ -11,86 +11,121 @@
     @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Open+Sans+Condensed:wght@300&family=Titillium+Web:ital,wght@1,200&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
   </style>
-
 </head>
 
 <body>
     <header>
       <div id = "top">
-      <div id = "header-block">
-        <div class = "header-block__name">
-          <p> <a href = "#top"> Mouaad Maiouf </a></p>
-        </div>
-          <nav>
-            <div id = "nav-block">
-              <p> <a href = "#top"> About </a> </p>
-              <p> <a href = "#section-projects"> Projects </a> </p>
-              <p> <a href = "blog.html"> Blog </a> </p>
-              <!--<p class = "contact_header"><a href = "#section_contact"> Contact</a></p>-->
-            </div>
-        </nav>
-      </div>
+		<div id = "header-block">
+			<div class = "header-block__name">
+				<p> <a href = "#top"> Mouaad Maiouf </a></p>
+			</div>
+			<nav>
+				<div id = "nav-block">
+					<p> <a href = "#top"> About </a> </p>
+					<p> <a href = "#section-projects"> Projects </a> </p>
+					<p> <a href = "blog.html"> Blog </a> </p>
+					<p class = "contact_header"><a href = "#section_contact"> Contact</a></p>
+				</div>
+			</nav>
+		</div>
       </div>
     </header>
     <section>
-      <div id = "section-about">
-        <div class = "about">
-          <div class ="about__photo">
-            <p><img src ="images/Photo_Mouaad_MAIOUF.PNG" alt = "Photo_Mouaad_MAIOUF"></p>
-          </div>
-          <div class ="about__presentation-block">
-            <h1 class = "about__presentation-block__title">Junior Developer</h1>
-            <div class = "about__presentation-block__my-presentation">
-              <p>Hello, welcome to my portfolio ! I'm a young novice developer who has recently taken an interest in programming, and since that day, it has become a real passion ! I am interested in all areas of programming, from web to mobile, including video games, applications or artificial intelligence. </p>
-              <p> You can see below all my complete or ongoing projects, built in solo or groups.</p>
-              <div class = "about__presentation-block__social-media-block">
-                <div class = "about__presentation-block__social-media-block__cv-logo"> 
-                  <a href = "docs/CV_Mouaad_MAIOUF.pdf" title = "Download my CV" target="_blank"><p>CV</p></a>
-                </div>
-                <div class = "about__presentation-block__social-media-block__github-logo"> 
-                  <a href = https://github.com/mmaiouf title = "Check my Github" target="_blank"><img src = "images/github_logo.png" alt = "Logo Github"></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+		<div id = "section-about">
+			<div class = "about">
+				<div class ="about__photo">
+					<p><img src ="images/Photo_Mouaad_MAIOUF.PNG" alt = "Photo_Mouaad_MAIOUF"></p>
+				</div>
+				<div class ="about__presentation-block">
+					<h1 class = "about__presentation-block__title">Junior Developer</h1>
+					<div class = "about__presentation-block__my-presentation">
+						<p>Hello, welcome to my portfolio ! I'm a young novice developer who has recently taken an interest in programming, and since that day, it has become a real passion ! I am interested in all areas of programming, from web to mobile, including video games, applications or artificial intelligence. </p>
+						<p> You can see below all my complete or ongoing projects, built in solo or groups.</p>
+					</div>
+					<div class = "about__presentation-block__social-media-block">
+						<div class = "about__presentation-block__social-media-block__cv-logo"> 
+							<a href = "docs/CV_Mouaad_MAIOUF_2024.pdf" title = "Download my CV" target="_blank"><p>CV</p></a>
+						</div>
+						<div class = "about__presentation-block__social-media-block__github-logo"> 
+							<a href = https://github.com/mmaiouf title = "Check my Github" target="_blank"><img src = "images/github_logo.png" alt = "Logo Github"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
     </section>
       <section>
         <div id = "section-projects">
-          <h1>Solo projects</h1>
-          <div class = "solo-grid-projects">
-            <div class = "solo-grid-projects__project-block">
-              <a href = "docs/CV_Mouaad_MAIOUF.pdf" title = "Check this project">
-                <h2 class = "solo-grid-projects__project-block__title-block width-title-cv-project">Curriculum Vitae</h2>
-                <p><img src = "images/CV_Mouaad_MAIOUF_image_mini.png" alt = "ScreenShot CV"></p>
-                <p class = "solo-grid-projects__project-block__short-description-project">My CV designed by myself</p>
-                <p class = "solo-grid-projects__project-block__tools-project"> HTML / CSS</p>
-                <a href = "https://github.com/mmaiouf/CV" target = "_blank"><p class = "solo-grid-projects__project-block__check-code">check the code</p></a>
-              </a>
-            </div>
-            <div class = "solo-grid-projects__project-block">
-              <a href = "images/project_tictactoe.gif" title = "Check this project" target = "_blank">
-                <h2 class = "solo-grid-projects__project-block__title-block width-title-tictactoe-project">TicTacToe Game (not complete)</h2>
-                <p><img src = "images/TicTacToe_image_mini.png" alt = "ScreenShot TicTacToe"></p>
-                <p class = "solo-grid-projects__project-block__short-description-project">A simple TicTacToe game</p>
-                <p class = "solo-grid-projects__project-block__tools-project"> HTML / CSS / Javascript</p>
-                <a href = "https://github.com/mmaiouf/TicTacToeJS-not-complete-" target = "_blank"><p class = "solo-grid-projects__project-block__check-code">check the code</p></a>
-              </a>
-            </div>
-            <div class = "solo-grid-projects__project-block">
-              <a href = "https://www.mmaiouf.fr" title = "Check this project" target = "_blank">
-                <h2 class = "solo-grid-projects__project-block__title-block width-title-portfolio-project">Portfolio</h2>
-                <p><img src = "images/Portfolio_image_mini.png" alt = "ScreenShot CV"></p>
-                <p class = "solo-grid-projects__project-block__short-description-project">This portfolio designed by myself</p>
-                <p class = "solo-grid-projects__project-block__tools-project"> HTML / CSS</p>
-                <a href = "https://github.com/mmaiouf/Portfolio_Project"><p class = "solo-grid-projects__project-block__check-code">check the code</p></a>
-              </a>
-            </div>
-          </div>  
+        	<h1>Solo projects</h1>
+          	<div class = "solo-grid-projects">
+				<div class = "grid-projects__project-block">
+					<a href = "docs/CV_Mouaad_MAIOUF_2024.pdf" title = "Check this project">
+						<h2 class = "grid-projects__project-block__title-block">Curriculum Vitae</h2>
+						<p><img src = "images/CV_Mouaad_MAIOUF_image_mini.png" alt = "ScreenShot CV"></p>
+						<p class = "grid-projects__project-block__short-description-project">My CV designed by me</p>
+						<p class = "grid-projects__project-block__tools-project"> HTML / CSS</p>
+						<a href = "https://github.com/mmaiouf/CV" target = "_blank"><p class = "grid-projects__project-block__check-code">check the code</p></a>
+					</a>
+				</div>
+				<div class = "grid-projects__project-block">
+					<a href = "images/so_long.gif" title = "Check this project" target = "_blank">
+						<h2 class = "grid-projects__project-block__title-block">so_long</h2>
+						<p><img src = "images/so_long_mini.gif" alt = "ScreenShot Shootemup"></p>
+						<p class = "grid-projects__project-block__short-description-project">A little 2d game</p>
+						<p class = "grid-projects__project-block__tools-project">C / Minlibx</p>
+						<a href = "https://github.com/mmaiouf/Cursus_42_School/tree/master/so_long" target = "_blank"><p class = "grid-projects__project-block__check-code">check the code</p></a>
+					</a>
+				</div>
+				<div class = "grid-projects__project-block">
+					<a href = "images/Shootemup.gif" title = "Check this project" target = "_blank">
+						<h2 class = "grid-projects__project-block__title-block">Shoot'em up!</h2>
+						<p><img src = "images/Shootemup_mini.gif" alt = "ScreenShot Shootemup"></p>
+						<p class = "grid-projects__project-block__short-description-project">A shoot'em up game with a final boss!</p>
+						<p class = "grid-projects__project-block__tools-project">Lua / LOVE2D</p>
+						<a href = "https://github.com/mmaiouf/Shoot_em_up" target = "_blank"><p class = "grid-projects__project-block__check-code">check the code</p></a>
+					</a>
+				</div>
+				<div class = "grid-projects__project-block">
+					<a href = "https://www.mmaiouf.fr" title = "Check this project" target = "_blank">
+						<h2 class = "grid-projects__project-block__title-block">Portfolio</h2>
+						<p><img src = "images/Portfolio_image_mini.png" alt = "ScreenShot CV"></p>
+						<p class = "grid-projects__project-block__short-description-project">This portfolio designed by me</p>
+						<p class = "grid-projects__project-block__tools-project"> HTML / CSS</p>
+						<a href = "https://github.com/mmaiouf/Portfolio_Project" target = "_blank"> <p class = "grid-projects__project-block__check-code">check the code</p></a>
+					</a>
+				</div>
+          	</div>  
+
+			<br>
+			<br>
+			<br>
+			<br>
+		  	<h1>Groups projects</h1>
+          	<div class = "groups-grid-projects">
+				<div class = "grid-projects__project-block">
+					<a href = "images/minishell.gif" title = "Check this project">
+						<h2 class = "grid-projects__project-block__title-block">minishell</h2>
+						<p><img src = "images/minishell_mini.gif" alt = "ScreenShot CV"></p>
+						<p class = "grid-projects__project-block__short-description-project">rebuild a (mini)shell</p>
+						<p class = "grid-projects__project-block__tools-project"> C language</p>
+						<a href = "https://github.com/mmaiouf/Cursus_42_School/tree/master/minishell" target = "_blank"><p class = "grid-projects__project-block__check-code">check the code</p></a>
+					</a>
+				</div>
+				<div class = "grid-projects__project-block">
+					<a href = "images/cub3d.gif" title = "Check this project" target = "_blank">
+						<h2 class = "grid-projects__project-block__title-block">cub3D</h2>
+						<p><img src = "images/cub3d_mini.gif" alt = "ScreenShot Shootemup"></p>
+						<p class = "grid-projects__project-block__short-description-project">using the raycasting concept to move in a 3D environnement</p>
+						<p class = "grid-projects__project-block__tools-project">C / Minlibx</p>
+						<a href = "https://github.com/mmaiouf/Cursus_42_School/tree/master/cub3D" target = "_blank"><p class = "grid-projects__project-block__check-code">check the code</p></a>
+					</a>
+				</div>
+			</div>
+
+
         </div>
       </section>
-    <!-- 
     <section>
       <div id = "section_contact">
         <h1>Contact me : </h1>
@@ -108,7 +143,7 @@
             <br>
             <p class = "label_form"><label for = "email">Email Address : </label></p>
             <br>
-            <input type = "mail" name = "email" id = "email"  placeholder = "Your Email Adress">
+            <input type = "mail" name = "email" id = "email"  placeholder = "Your Email Address">
             <br>
             <br>
             <p class = "label_form"><label for = "text">Message : </label></p>
@@ -121,9 +156,8 @@
       </div>
       <div id = "thank_you_sent"></div>
     </section>
-    -->
     <footer>
-      <p>© 2021 Copyright Mouaad MAIOUF. All rights reserved.</p>
+      <p>© 2024 Copyright Mouaad MAIOUF. All rights reserved.</p>
     </footer>
 </body>
 </html>
